--- a/SPCAF.Rules/MigrationAssessment/SPCAF.Rules.MigrationAssessment.csproj
+++ b/SPCAF.Rules/MigrationAssessment/SPCAF.Rules.MigrationAssessment.csproj
@@ -37,13 +37,34 @@
     <SignAssembly>false</SignAssembly>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Mono.Cecil">
-      <HintPath Condition="Exists('C:\Program Files (x86)\SPCAF')">C:\Program Files (x86)\SPCAF\Mono.Cecil.dll</HintPath>
-      <HintPath Condition="Exists('C:\Program Files (x86)\SPCAFMigrationAssessment')">C:\Program Files (x86)\SPCAFMigrationAssessment\Mono.Cecil.dll</HintPath>
+    <Reference Include="ICSharpCode.NRefactory, Version=5.0.0.2, Culture=neutral, PublicKeyToken=d4bfe873e7598c49, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\packages\ICSharpCode.NRefactory.5.0.0.3\lib\Net40\ICSharpCode.NRefactory.dll</HintPath>
     </Reference>
-    <Reference Include="SPCAF.Sdk">
-     <HintPath Condition="Exists('C:\Program Files (x86)\SPCAF')">C:\Program Files (x86)\SPCAF\Mono.Sdk.dll</HintPath>
-     <HintPath Condition="Exists('C:\Program Files (x86)\SPCAFMigrationAssessment')">C:\Program Files (x86)\SPCAFMigrationAssessment\Mono.Sdk.dll</HintPath>
+    <Reference Include="ICSharpCode.NRefactory.CSharp, Version=5.0.0.2, Culture=neutral, PublicKeyToken=d4bfe873e7598c49, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\packages\ICSharpCode.NRefactory.5.0.0.3\lib\Net40\ICSharpCode.NRefactory.CSharp.dll</HintPath>
+    </Reference>
+    <Reference Include="log4net, Version=1.2.10.0, Culture=neutral, PublicKeyToken=1b44e1d426115821, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\packages\log4net.1.2.10\lib\2.0\log4net.dll</HintPath>
+    </Reference>
+    <Reference Include="Mono.Cecil, Version=0.9.5.0, Culture=neutral, PublicKeyToken=0738eb9f132ed756, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\packages\Mono.Cecil.0.9.5.2\lib\net40\Mono.Cecil.dll</HintPath>
+    </Reference>
+    <Reference Include="Mono.Cecil.Mdb">
+      <HintPath>..\packages\Mono.Cecil.0.9.5.2\lib\net40\Mono.Cecil.Mdb.dll</HintPath>
+    </Reference>
+    <Reference Include="Mono.Cecil.Pdb">
+      <HintPath>..\packages\Mono.Cecil.0.9.5.2\lib\net40\Mono.Cecil.Pdb.dll</HintPath>
+    </Reference>
+    <Reference Include="Mono.Cecil.Rocks">
+      <HintPath>..\packages\Mono.Cecil.0.9.5.2\lib\net40\Mono.Cecil.Rocks.dll</HintPath>
+    </Reference>
+    <Reference Include="SPCAF.Sdk, Version=5.2.3.3625, Culture=neutral, PublicKeyToken=8295a2d5d4b559f9, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\packages\SPCAF.Sdk.5.2.3\lib\net40\SPCAF.Sdk.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -55,69 +76,118 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="SMA25_Customization\64_Webpart\SMA256401_WebPartUserProfileManager.cs" />
-    <Compile Include="SMA25_Customization\64_Webpart\SMA256402_WebPartWithSearch.cs" />
-    <Compile Include="SMA25_Customization\64_Webpart\SMA256403_WebPartWithXsltTransform.cs" />
-    <Compile Include="SMA26_DeploymentAndProvisioning\21_Feature\SMA262101_Feature.cs" />
-    <Compile Include="SMA26_DeploymentAndProvisioning\56_ContentTypeBinding\SMA265601_ContentTypeBinding.cs" />
-    <Compile Include="SMA26_DeploymentAndProvisioning\55_ListDefinition\SMA265501_ListDefinition.cs" />
-    <Compile Include="SMA26_DeploymentAndProvisioning\54_ListInstance\SMA265401_ListInstance.cs" />
-    <Compile Include="SMA26_DeploymentAndProvisioning\51_Field\SMA265101_Field.cs" />
-    <Compile Include="SMA26_DeploymentAndProvisioning\52_ContentType\SMA265201_ContentType.cs" />
-    <Compile Include="SMA26_DeploymentAndProvisioning\70_FeatureStapling\SMA267001_FeatureStapling.cs" />
-    <Compile Include="SMA26_DeploymentAndProvisioning\71_WebTemplate\SMA267701_WebTemplate.cs" />
-    <Compile Include="SMA26_DeploymentAndProvisioning\78_SiteDefinition\SMA267801_SiteDefinition.cs" />
-    <Compile Include="SMA26_DeploymentAndProvisioning\04_TemplateFile\SMA260401_LayoutFiles.cs" />
-    <Compile Include="SMA28_ProcessIntegration\50_Receiver\SMA286003_WebEventReceiver.cs" />
-    <Compile Include="SMA28_ProcessIntegration\50_Receiver\SMA286002_ListEventReceiver.cs" />
-    <Compile Include="SMA28_ProcessIntegration\50_Receiver\SMA286001_ItemEventReceiver.cs" />
-    <Compile Include="SMA28_ProcessIntegration\58_CustomActionGroup\SMA285801_CustomActionGroup.cs" />
-    <Compile Include="SMA28_ProcessIntegration\59_HideCustomAction\SMA285901_HideCustomAction.cs" />
-    <Compile Include="SMA28_ProcessIntegration\57_CustomAction\SMA285701_CustomAction.cs" />
-    <Compile Include="SMA29_AdvancedAndMiscs\01_Assembly\SMA290122_PropertyBag.cs" />
-    <Compile Include="SMA29_AdvancedAndMiscs\04_TemplateFile\SMA292202_FieldTypes.cs" />
-    <Compile Include="SMA29_AdvancedAndMiscs\01_Assembly\SMA290121_HttpHandler.cs" />
-    <Compile Include="SMA29_AdvancedAndMiscs\01_Assembly\SMA290120_HttpModule.cs" />
-    <Compile Include="SMA29_AdvancedAndMiscs\01_Assembly\SMA290110_TimerJobs.cs" />
+    <Compile Include="SMA25_Customization\SMA2564_Webpart\SMA256401_WebPartUserProfileManager.cs" />
+    <Compile Include="SMA25_Customization\SMA2564_Webpart\SMA256402_WebPartWithSearch.cs" />
+    <Compile Include="SMA25_Customization\SMA2564_Webpart\SMA256403_WebPartWithXsltTransform.cs" />
+    <Compile Include="SMA26_DeploymentAndProvisioning\SMA2621_Feature\SMA262101_Feature.cs" />
+    <Compile Include="SMA26_DeploymentAndProvisioning\SMA2656_ContentTypeBinding\SMA265601_ContentTypeBinding.cs" />
+    <Compile Include="SMA26_DeploymentAndProvisioning\SMA2655_ListDefinition\SMA265501_ListDefinition.cs" />
+    <Compile Include="SMA26_DeploymentAndProvisioning\SMA2654_ListInstance\SMA265401_ListInstance.cs" />
+    <Compile Include="SMA26_DeploymentAndProvisioning\SMA2651_Field\SMA265101_Field.cs" />
+    <Compile Include="SMA26_DeploymentAndProvisioning\SMA2652_ContentType\SMA265201_ContentType.cs" />
+    <Compile Include="SMA26_DeploymentAndProvisioning\SMA2670_FeatureStapling\SMA267001_FeatureStapling.cs" />
+    <Compile Include="SMA26_DeploymentAndProvisioning\SMA2677_WebTemplate\SMA267701_WebTemplate.cs" />
+    <Compile Include="SMA26_DeploymentAndProvisioning\SMA2678_SiteDefinition\SMA267801_SiteDefinition.cs" />
+    <Compile Include="SMA26_DeploymentAndProvisioning\SMA2604_TemplateFile\SMA260401_LayoutFiles.cs" />
+    <Compile Include="SMA28_ProcessIntegration\SMA2860_Receiver\SMA286003_WebEventReceiver.cs" />
+    <Compile Include="SMA28_ProcessIntegration\SMA2860_Receiver\SMA286002_ListEventReceiver.cs" />
+    <Compile Include="SMA28_ProcessIntegration\SMA2860_Receiver\SMA286001_ItemEventReceiver.cs" />
+    <Compile Include="SMA28_ProcessIntegration\SMA2858_CustomActionGroup\SMA285801_CustomActionGroup.cs" />
+    <Compile Include="SMA28_ProcessIntegration\SMA2859_HideCustomAction\SMA285901_HideCustomAction.cs" />
+    <Compile Include="SMA28_ProcessIntegration\SMA2857_CustomAction\SMA285701_CustomAction.cs" />
+    <Compile Include="SMA29_AdvancedAndMiscs\SMA2901_Assembly\SMA290122_PropertyBag.cs" />
+    <Compile Include="SMA29_AdvancedAndMiscs\SMA2922_FieldType\SMA292202_FieldTypes.cs" />
+    <Compile Include="SMA29_AdvancedAndMiscs\SMA2901_Assembly\SMA290121_HttpHandler.cs" />
+    <Compile Include="SMA29_AdvancedAndMiscs\SMA2901_Assembly\SMA290120_HttpModule.cs" />
+    <Compile Include="SMA29_AdvancedAndMiscs\SMA2901_Assembly\SMA290110_TimerJobs.cs" />
     <Compile Include="Categories.cs" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="SMA26_DeploymentAndProvisioning\01_Assembly\" />
-    <Folder Include="SMA27_UIAndBranding\" />
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="Resources\SMABranding.html" />
-    <EmbeddedResource Include="Resources\SMA267701.html" />
-    <EmbeddedResource Include="Resources\SMA285801.html" />
-    <EmbeddedResource Include="Resources\SMA285901.html" />
-    <EmbeddedResource Include="Resources\SMA256401.html" />
-    <EmbeddedResource Include="Resources\SMA256403.html" />
-    <EmbeddedResource Include="Resources\SMA256402.html" />
+    <EmbeddedResource Include="SMA27_UIAndBranding\SMABranding.html" />
+    <EmbeddedResource Include="SMA26_DeploymentAndProvisioning\SMA2677_WebTemplate\SMA267701_WebTemplate.Resolution.html">
+      <DependentUpon>SMA267701_WebTemplate.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="SMA28_ProcessIntegration\SMA2858_CustomActionGroup\SMA285801_CustomActionGroup.Resolution.html">
+      <DependentUpon>SMA285801_CustomActionGroup.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="SMA28_ProcessIntegration\SMA2859_HideCustomAction\SMA285901_HideCustomAction.Resolution.html">
+      <DependentUpon>SMA285901_HideCustomAction.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="SMA25_Customization\SMA2564_Webpart\SMA256401_WebPartUserProfileManager.Resolution.html">
+      <DependentUpon>SMA256401_WebPartUserProfileManager.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="SMA25_Customization\SMA2564_Webpart\SMA256403_WebPartWithXsltTransform.Resolution.html">
+      <DependentUpon>SMA256403_WebPartWithXsltTransform.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="SMA25_Customization\SMA2564_Webpart\SMA256402_WebPartWithSearch.Resolution.html">
+      <DependentUpon>SMA256402_WebPartWithSearch.cs</DependentUpon>
+    </EmbeddedResource>
     <Content Include="Resources\blankResolutionResourceTemplate.html" />
-    <EmbeddedResource Include="Resources\SMA262101.html" />
-    <EmbeddedResource Include="Resources\SMA290122.html" />
+    <EmbeddedResource Include="SMA26_DeploymentAndProvisioning\SMA2621_Feature\SMA262101_Feature.Resolution.html">
+      <DependentUpon>SMA262101_Feature.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="SMA29_AdvancedAndMiscs\SMA2901_Assembly\SMA290122_PropertyBag.Resolution.html">
+      <DependentUpon>SMA290122_PropertyBag.cs</DependentUpon>
+    </EmbeddedResource>
+    <None Include="app.config" />
+    <None Include="packages.config" />
     <None Include="Resources\Readme.md" />
   </ItemGroup>
   <ItemGroup>
     <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="Resources\SMA260401.html" />
-    <EmbeddedResource Include="Resources\SMA265101.html" />
-    <EmbeddedResource Include="Resources\SMA265201.html" />
-    <EmbeddedResource Include="Resources\SMA265401.html" />
-    <EmbeddedResource Include="Resources\SMA265501.html" />
-    <EmbeddedResource Include="Resources\SMA267001.html" />
-    <EmbeddedResource Include="Resources\SMA267801.html" />
-    <EmbeddedResource Include="Resources\SMA285701.html" />
-    <EmbeddedResource Include="Resources\SMA286001.html" />
-    <EmbeddedResource Include="Resources\SMA286002.html" />
-    <EmbeddedResource Include="Resources\SMA286003.html" />
-    <EmbeddedResource Include="Resources\SMA290110.html" />
-    <EmbeddedResource Include="Resources\SMA290120.html" />
-    <EmbeddedResource Include="Resources\SMA290121.html" />
-    <EmbeddedResource Include="Resources\SMA292202.html" />
-    <EmbeddedResource Include="Resources\SMA265601.html" />
+    <EmbeddedResource Include="SMA26_DeploymentAndProvisioning\SMA2604_TemplateFile\SMA260401_LayoutFiles.Resolution.html">
+      <DependentUpon>SMA260401_LayoutFiles.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="SMA26_DeploymentAndProvisioning\SMA2651_Field\SMA265101_Field.Resolution.html">
+      <DependentUpon>SMA265101_Field.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="SMA26_DeploymentAndProvisioning\SMA2652_ContentType\SMA265201_ContentType.Resolution.html">
+      <DependentUpon>SMA265201_ContentType.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="SMA26_DeploymentAndProvisioning\SMA2654_ListInstance\SMA265401_ListInstance.Resolution.html">
+      <DependentUpon>SMA265401_ListInstance.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="SMA26_DeploymentAndProvisioning\SMA2655_ListDefinition\SMA265501_ListDefinition.Resolution.html">
+      <DependentUpon>SMA265501_ListDefinition.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="SMA26_DeploymentAndProvisioning\SMA2670_FeatureStapling\SMA267001_FeatureStapling.Resolution.html">
+      <DependentUpon>SMA267001_FeatureStapling.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="SMA26_DeploymentAndProvisioning\SMA2678_SiteDefinition\SMA267801_SiteDefinition.Resolution.html">
+      <DependentUpon>SMA267801_SiteDefinition.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="SMA28_ProcessIntegration\SMA2857_CustomAction\SMA285701_CustomAction.Resolution.html">
+      <DependentUpon>SMA285701_CustomAction.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="SMA28_ProcessIntegration\SMA2860_Receiver\SMA286001_ItemEventReceiver.Resolution.html">
+      <DependentUpon>SMA286001_ItemEventReceiver.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="SMA28_ProcessIntegration\SMA2860_Receiver\SMA286002_ListEventReceiver.Resolution.html">
+      <DependentUpon>SMA286002_ListEventReceiver.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="SMA28_ProcessIntegration\SMA2860_Receiver\SMA286003_WebEventReceiver.Resolution.html">
+      <DependentUpon>SMA286003_WebEventReceiver.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="SMA29_AdvancedAndMiscs\SMA2901_Assembly\SMA290110_TimerJobs.Resolution.html">
+      <DependentUpon>SMA290110_TimerJobs.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="SMA29_AdvancedAndMiscs\SMA2901_Assembly\SMA290120_HttpModule.Resolution.html">
+      <DependentUpon>SMA290120_HttpModule.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="SMA29_AdvancedAndMiscs\SMA2901_Assembly\SMA290121_HttpHandler.Resolution.html">
+      <DependentUpon>SMA290121_HttpHandler.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="SMA29_AdvancedAndMiscs\SMA2922_FieldType\SMA292202_FieldTypes.Resolution.html">
+      <DependentUpon>SMA292202_FieldTypes.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="SMA26_DeploymentAndProvisioning\SMA2656_ContentTypeBinding\SMA265601_ContentTypeBinding.Resolution.html">
+      <DependentUpon>SMA265601_ContentTypeBinding.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
